--- a/package.json
+++ b/package.json
@@ -9,18 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^9.120.5",
+    "@react-three/fiber": "^8.17.10",
+    "@react-three/postprocessing": "^2.16.5",
+    "next": "14.2.20",
+    "r3f": "^1.0.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.20"
+    "three": "^0.172.0",
+    "three-stdlib": "^2.35.2"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.20",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.20"
+    "typescript": "^5"
   }
 }
